--- a/src/_help.scss
+++ b/src/_help.scss
@@ -1,147 +1,130 @@
-#pixies-help-button {
-    position: fixed;
-    bottom: 12px;
-    left: 5px;
-    width: 50px;
-    height: 50px;
-    background: #60c2cb; // expansion : 1a5b93
-    font-weight: bold;
-    color: white;
-    border-radius: 25px;
-    box-shadow: 3px 5px 5px 0px rgb(0 0 0);
-    cursor: pointer;
-    z-index: 949;
-    font-size: 28pt;
+.color-help-folded-content {
+    background: url('img/logo-coloradd.svg') white center no-repeat;
+    background-size: contain;
 }
 
-#color-help-button {
-    position: fixed;
-    bottom: 12px;
-    left: 65px;
-    width: 50px;
-    height: 50px;
-    border-radius: 25px;
-    box-shadow: 3px 5px 5px 0px rgb(0 0 0);
-    cursor: pointer;
-    z-index: 949;
-    overflow: hidden;
-    background-size: contain;
-    transition: width 0.5s, height 0.5s, border-radius 0.5s, background-image 0.5s;
+.color-help-unfolded-content {
+    display: grid;
+    grid-template-columns: 40px 80px;
+    align-items: center;
+    justify-items: center;
+    background: #ebdbcb;
+    
+    .color-icon {
+        display: inline-block;
+        width: 18px;
+        height: 18px;
+        background-image: url('img/cards0.jpg');
+        background-position-x: -80px;
+        border-radius: 5px;
+
+        @for $i from 0 through 4 {
+            &[data-row="#{$i}"] {
+                background-position-y: #{-9px - 282px * $i};
+            }
+        }
+    }
 
     .label {
-        position: absolute;
-        color: white;
         font-size: 10pt;
-        opacity: 0;
-        text-transform: uppercase;
         display: flex;
-        justify-content: center;
+        justify-content: start;
         align-items: center;
-        width: 69px;
+        width: 100%;
         height: 42px;
-        word-break: break-word;
-
-        @for $i from 0 through 5 {
-            &[data-row="#{$i}"] {
-              top: #{11 + $i * 49.8}px;
-            }
-        }
-        @for $i from 0 through 1 {
-            &[data-column="#{$i}"] {
-              left: #{38 + $i * 105}px;
-            }
-        }
-    }
-
-    .quantity {
-        position: absolute;
-        color: white;
-        font-size: 9pt;
-        opacity: 0;
-        text-transform: uppercase;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        width: 29px;
-        height: 17px;
-        word-break: break-word;
-
-        @for $i from 0 through 5 {
-            &[data-row="#{$i}"] {
-              top: #{36 + $i * 49.8}px;
-            }
-        }
-        @for $i from 0 through 1 {
-            &[data-column="#{$i}"] {
-              left: #{11 + $i * 105}px;
-            }
-        }
-    }
-
-    &[data-folded="true"] {
-        background-image: url('img/logo-coloradd.svg');
-    }
-    &[data-folded="false"] {
-        background-image: url('img/color-legend.jpg');
-        width: 223px;
-        height: 312px;
-        border-radius: 10px;
-        
-        .label, .quantity {
-            opacity: 1;
-        }
+        word-break: break-word;  
+        color: black;      
     }
 }
 
-/* we show help button if user has no mouse ( = no tooltips) */
-@media (hover: hover) {
-    #pixies-help-button, #color-help-button {
-        //display: none;
-        bottom: 5px;
-    }
-}
 
-#popin_pixiesHelpDialog_contents {
-    max-width: 100vw;
-    overflow-x: auto;
-}
-
-#popin_pixiesHelpDialog {
-    background: white;
-    background-repeat: repeat;
-    max-width: 100vw;
-    max-height: 80vh;
-    overflow: hidden;
+#popin_bgaHelpDialog {
+    background: #ebdbcb;
 }
 
 #help-popin {
-    width: 520px;
-    max-width: 35rem;
-    max-height: calc(80vh - 80px);
-    overflow: auto;
+    h1, h2 {
+        padding: 5px;
+        border-radius: 10px;
+        font-weight: normal;
+        color: white;
+        font-family: "komika parch";
+        text-align: center;
+    }
 
     h1 {
-        color: #63c5cf;
+        background: #571f13;
+        font-size: 22px;
+        margin: 10px 0;
+    }
+
+    h2 {
+        background: #C1262F;
         font-size: 18px;
         margin: 8px 0;
     }
 
-    .help-section {    
-        color: white;
-        background-color: #63c5cf;
-        border-radius: 8px;
-        padding: 5px;
-        margin: 3px 0;
+    .row {
+        display: grid;
+        align-items: center;
+        justify-items: center;
+        grid-template-columns: 64px auto;
+        gap: 10px;
 
-        display: flex;
+        .help-icon {
+            display: inline-block;
+            width: 48px;
+            height: 48px;
+            background-image: url('img/cards.jpg');
+            border-radius: 5px;
+    
+            &.card {
+                background-position: -1010px -232px;
+            }
+            &.token {
+                background-position: -1616px -232px;
+            }
 
-        &>div:not(:first-child) {
-            margin-left: 5px;
+            &.score {
+                width: 40px;
+                height: 40px;
+            }
+    
+            &.by-color {
+                background-position: -8px -8px;
+            }
+            &.different {
+                background-position: -1220px -572px;
+            }
+            &.by-resource {
+                background-position: -614px -854px;
+            }
+            &.by-type {
+                background-position: -1826px -290px;
+            }
+        }
 
-            &:not([id]) {
-                flex: 1;
-                margin-left: 5px;
-            } 
-        } 
+        &.help-chief {
+            grid-template-columns: 108px auto;
+
+            .help-icon {
+                width: 100px;
+                background-image: url('img/cards0.jpg');
+                background-position-y: -231px;
+
+                @for $i from 1 through 4 {
+                    &[data-power="#{$i}"] {
+                        background-position-x: #{-910px - 202px * ($i - 1)};
+                    }
+                }
+            }
+        }
+
+        .help-label {
+            width: 100%;
+            display: flex;
+            justify-content: start;
+            align-items: center;
+        }
     }
 }
