--- a/src/_player-table.scss
+++ b/src/_player-table.scss
@@ -15,6 +15,7 @@
     .name {
       font-size: 20pt;
       font-weight: bold;
+      font-family: 'pixies';
     }
   }
 
@@ -33,6 +34,19 @@
       border-radius: 10px;
       position: relative;
 
+      &::before {
+        content: var(--value);
+        position: absolute;
+        top: 50px;
+        left: 0;
+        right: 0;
+        text-align: center;
+        font-size: 50pt;
+        font-weight: bold;
+        font-family: 'pixies';
+        color: #FFFFFF66;
+      }
+
       .slot {
         position: absolute;
 
@@ -49,6 +63,10 @@
       &.selectable {
         cursor: pointer;
         animation: selectable-card-animation 1s alternate infinite ease-in-out;
+
+        &::before {
+          color: #FFFFFFBB;
+        }
       }
     }
   }
