--- a/src/pixies.scss
+++ b/src/pixies.scss
@@ -1,10 +1,21 @@
 @import '../node_modules/bga-zoom/bga-zoom';
+@import '../node_modules/bga-help/bga-help';
 @import '../node_modules/bga-cards/bga-cards';
 @import 'cards';
-@import 'stacks';
+@import 'table-center';
 @import 'playerboards';
 @import 'player-table';
 @import 'help';
+
+
+@font-face {
+  font-family: 'pixies';
+  src: url('img/pixies.woff2') format('woff2'),
+       url('img/pixies.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+
+}
 
 /* make space between buttons on touch devices */
 @media (hover: none) {
@@ -15,7 +26,8 @@
 }
 
 html, .mode_3d #game_play_area_background {
-  background: url('img/background.jpg');
+  background: url('img/background.jpg') #3d5c28;
+  background-size: 100% 100%;
 }
 
 #full-table {
