--- a/pixies.css
+++ b/pixies.css
@@ -807,30 +807,27 @@ body > .card {
   grid-template-columns: 40px 80px;
   align-items: center;
   justify-items: center;
-  background: #ebdbcb;
+  background: #c3dfa5;
 }
 .color-help-unfolded-content .color-icon {
   display: inline-block;
-  width: 18px;
-  height: 18px;
+  width: 28px;
+  height: 28px;
   background-image: url("img/cards0.jpg");
-  background-position-x: -80px;
+  background-position-y: 56px;
   border-radius: 5px;
 }
 .color-help-unfolded-content .color-icon[data-row="0"] {
-  background-position-y: -9px;
+  background-position-x: -185px;
 }
 .color-help-unfolded-content .color-icon[data-row="1"] {
-  background-position-y: -291px;
+  background-position-x: -86px;
 }
 .color-help-unfolded-content .color-icon[data-row="2"] {
-  background-position-y: -573px;
+  background-position-x: -119px;
 }
 .color-help-unfolded-content .color-icon[data-row="3"] {
-  background-position-y: -855px;
-}
-.color-help-unfolded-content .color-icon[data-row="4"] {
-  background-position-y: -1137px;
+  background-position-x: -152px;
 }
 .color-help-unfolded-content .label {
   font-size: 10pt;
