--- a/src/pixies.scss
+++ b/src/pixies.scss
@@ -80,6 +80,8 @@ html, .mode_3d #game_play_area_background {
 #result {
   display: flex;
   justify-content: center;
+  flex-wrap: wrap;
+  gap: 10px;
 
   .round-result {
     margin: 10px;
