--- a/src/_player-table.scss
+++ b/src/_player-table.scss
@@ -16,6 +16,11 @@
       font-size: 20pt;
       font-weight: bold;
       font-family: 'pixies';
+      text-shadow: 0 0 1px white, 0 0 2px white, 0 0 3px white;
+
+      &[data-color="FFFFFF"], &[data-color="ffffff"] {
+        text-shadow: 0 0 1px black, 0 0 2px black, 0 0 3px black;
+      }
     }
   }
 
